Initial code - Nasa Mars News

--- a/Missions_to_Mars/mission_to_mars.ipynb
+++ b/Missions_to_Mars/mission_to_mars.ipynb
@@ -1,14 +1,116 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "2ec00203",
+   "metadata": {},
+   "source": [
+    "# Part  1: Scraping"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7fb783af",
+   "execution_count": 1,
+   "id": "053ad2fd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "start"
+    "# Dependencies\n",
+    "from splinter import Browser\n",
+    "from bs4 import BeautifulSoup\n",
+    "from webdriver_manager.chrome import ChromeDriverManager\n",
+    "import requests\n",
+    "import pymongo\n",
+    "import os"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "30436ea0",
+   "metadata": {},
+   "source": [
+    "## NASA Mars News"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "d63d3a77",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "====== WebDriver manager ======\n",
+      "Current google-chrome version is 101.0.4951\n",
+      "Get LATEST chromedriver version for 101.0.4951 google-chrome\n",
+      "Driver [/Users/coreylawson-enos/.wdm/drivers/chromedriver/mac64/101.0.4951.41/chromedriver] found in cache\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Set up splinter\n",
+    "executable_path = {'executable_path': ChromeDriverManager().install()}\n",
+    "browser = Browser('chrome', **executable_path, headless=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "52579f20",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Link to website\n",
+    "url = 'https://redplanetscience.com/#'\n",
+    "browser.visit(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "10dd8734",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NASA's Perseverance Mars Rover Gets Its Wheels and Air Brakes\n",
+      "After the rover was shipped from JPL to Kennedy Space Center, the team is getting closer to finalizing the spacecraft for launch later this summer.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Scrape website and store first news article's title and paragraph in variables\n",
+    "html = browser.html\n",
+    "soup = BeautifulSoup(html, 'html.parser')\n",
+    "\n",
+    "news_title = soup.find('div', class_='content_title').text\n",
+    "news_p = soup.find('div', class_='article_teaser_body').text\n",
+    "\n",
+    "print(news_title)\n",
+    "print(news_p)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b2e82ad9",
+   "metadata": {},
+   "source": [
+    "## JPL Mars Space Images—Featured Image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8483df77",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
