Code through Featured Image

--- a/Missions_to_Mars/mission_to_mars.ipynb
+++ b/Missions_to_Mars/mission_to_mars.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2ec00203",
+   "id": "6f0ee5e3",
    "metadata": {},
    "source": [
     "# Part  1: Scraping"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "053ad2fd",
+   "id": "14190f94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30436ea0",
+   "id": "cc117d66",
    "metadata": {},
    "source": [
     "## NASA Mars News"
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d63d3a77",
+   "id": "e9721a3c",
    "metadata": {},
    "outputs": [
     {
@@ -54,13 +54,13 @@
    "source": [
     "# Set up splinter\n",
     "executable_path = {'executable_path': ChromeDriverManager().install()}\n",
-    "browser = Browser('chrome', **executable_path, headless=True)"
+    "browser = Browser('chrome', **executable_path, headless=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "52579f20",
+   "id": "32b3c1ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,15 +72,15 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "10dd8734",
+   "id": "b3a4df5e",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "NASA's Perseverance Mars Rover Gets Its Wheels and Air Brakes\n",
-      "After the rover was shipped from JPL to Kennedy Space Center, the team is getting closer to finalizing the spacecraft for launch later this summer.\n"
+      "HiRISE Views NASA's InSight and Curiosity on Mars\n",
+      "New images taken from space offer the clearest orbital glimpse yet of InSight as well as a view of Curiosity rolling along.\n"
      ]
     }
    ],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2e82ad9",
+   "id": "f193ef74",
    "metadata": {},
    "source": [
     "## JPL Mars Space Images—Featured Image"
@@ -106,8 +106,60 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "id": "9a72594e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Link to website\n",
+    "url = 'https://spaceimages-mars.com/'\n",
+    "browser.visit(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "ea061079",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://spaceimages-mars.com/image/featured/mars2.jpg\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Scrape website for featured image URL\n",
+    "html = browser.html\n",
+    "soup = BeautifulSoup(html, 'html.parser')\n",
+    "\n",
+    "featured_image_url = 'https://spaceimages-mars.com/' + soup.find('a', class_='showimg fancybox-thumbs')['href']\n",
+    "\n",
+    "print(featured_image_url)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0eec9861",
+   "metadata": {},
+   "source": [
+    "## Mars Facts"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "8483df77",
+   "id": "5566a6ea",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1f995475",
    "metadata": {},
    "outputs": [],
    "source": []
