Final code for Part 1

--- a/Missions_to_Mars/mission_to_mars.ipynb
+++ b/Missions_to_Mars/mission_to_mars.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6f0ee5e3",
+   "id": "4eeb0437",
    "metadata": {},
    "source": [
     "# Part  1: Scraping"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "14190f94",
+   "id": "31a8f051",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,12 +21,13 @@
     "from webdriver_manager.chrome import ChromeDriverManager\n",
     "import requests\n",
     "import pymongo\n",
+    "import pandas as pd\n",
     "import os"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "cc117d66",
+   "id": "41afa024",
    "metadata": {},
    "source": [
     "## NASA Mars News"
@@ -35,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e9721a3c",
+   "id": "a99e7171",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "32b3c1ee",
+   "id": "51909b09",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,15 +73,15 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "b3a4df5e",
+   "id": "45d1dbb9",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "HiRISE Views NASA's InSight and Curiosity on Mars\n",
-      "New images taken from space offer the clearest orbital glimpse yet of InSight as well as a view of Curiosity rolling along.\n"
+      "Global Storms on Mars Launch Dust Towers Into the Sky\n",
+      "A Mars Dust Tower Stands Out Dust storms are common on Mars. But every decade or so, something unpredictable happens: a series of runaway storms break out, covering the entire planet in a dusty haze.\n"
      ]
     }
    ],
@@ -98,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f193ef74",
+   "id": "9e15c643",
    "metadata": {},
    "source": [
     "## JPL Mars Space Images—Featured Image"
@@ -107,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "9a72594e",
+   "id": "bbc1352d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "ea061079",
+   "id": "c81ff9fc",
    "metadata": {},
    "outputs": [
     {
@@ -131,18 +132,19 @@
     }
    ],
    "source": [
-    "# Scrape website for featured image URL\n",
+    "# Scrape website for featured image URL; includes click for full image\n",
     "html = browser.html\n",
+    "browser.links.find_by_partial_text('FULL IMAGE').click()\n",
     "soup = BeautifulSoup(html, 'html.parser')\n",
     "\n",
-    "featured_image_url = 'https://spaceimages-mars.com/' + soup.find('a', class_='showimg fancybox-thumbs')['href']\n",
+    "featured_image_url = 'https://spaceimages-mars.com/' + soup.find('img', class_='headerimage fade-in')['src']\n",
     "\n",
     "print(featured_image_url)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0eec9861",
+   "id": "3512913e",
    "metadata": {},
    "source": [
     "## Mars Facts"
@@ -150,8 +152,126 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 175,
+   "id": "5a7b32d5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Source url\n",
+    "url = 'https://galaxyfacts-mars.com/'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "id": "900c7626",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'<table border=\"1\" class=\"dataframe\">  <thead>    <tr style=\"text-align: right;\">      <th></th>      <th>Mars</th>      <th>Earth</th>    </tr>    <tr>      <th>Description</th>      <th></th>      <th></th>    </tr>  </thead>  <tbody>    <tr>      <th>Mars - Earth Comparison</th>      <td>Mars</td>      <td>Earth</td>    </tr>    <tr>      <th>Diameter:</th>      <td>6,779 km</td>      <td>12,742 km</td>    </tr>    <tr>      <th>Mass:</th>      <td>6.39 × 10^23 kg</td>      <td>5.97 × 10^24 kg</td>    </tr>    <tr>      <th>Moons:</th>      <td>2</td>      <td>1</td>    </tr>    <tr>      <th>Distance from Sun:</th>      <td>227,943,824 km</td>      <td>149,598,262 km</td>    </tr>    <tr>      <th>Length of Year:</th>      <td>687 Earth days</td>      <td>365.24 days</td>    </tr>    <tr>      <th>Temperature:</th>      <td>-87 to -5 °C</td>      <td>-88 to 58°C</td>    </tr>  </tbody></table>'"
+      ]
+     },
+     "execution_count": 176,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Use Panda's `read_html` to parse the url\n",
+    "tables = pd.read_html(url)\n",
+    "\n",
+    "mars_facts = tables[0] # Select Mars facts table\n",
+    "mars_facts.columns = ['Description', 'Mars', 'Earth'] # Rename the columns\n",
+    "mars_facts.set_index('Description', inplace=True) # Set the index to the first column\n",
+    "\n",
+    "# Convert Mars Facts Data Frame to html, removing unwanted newlines\n",
+    "mars_facts = mars_facts.to_html()\n",
+    "mars_facts = mars_facts.replace('\\n', '')\n",
+    "mars_facts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "153dfa30",
+   "metadata": {},
+   "source": [
+    "## Mars Hemispheres"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 220,
+   "id": "0516fa97",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Link to website\n",
+    "url = 'https://marshemispheres.com/'\n",
+    "browser.visit(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 221,
+   "id": "4d6e2103",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'title': 'Cerberus Hemisphere', 'img_url': 'https://marshemispheres.com/images/f5e372a36edfa389625da6d0cc25d905_cerberus_enhanced.tif_full.jpg'}, {'title': 'Schiaparelli Hemisphere', 'img_url': 'https://marshemispheres.com/images/3778f7b43bbbc89d6e3cfabb3613ba93_schiaparelli_enhanced.tif_full.jpg'}, {'title': 'Syrtis Major Hemisphere', 'img_url': 'https://marshemispheres.com/images/555e6403a6ddd7ba16ddb0e471cadcf7_syrtis_major_enhanced.tif_full.jpg'}, {'title': 'Valles Marineris Hemisphere', 'img_url': 'https://marshemispheres.com/images/b3c7c6c9138f57b4756be9b9c43e3a48_valles_marineris_enhanced.tif_full.jpg'}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Scrape website\n",
+    "html = browser.html\n",
+    "soup = BeautifulSoup(html, 'lxml')\n",
+    "\n",
+    "# Collect h3 text for hemisphere links\n",
+    "container = soup.find('div', class_=\"collapsible results\")\n",
+    "products = container.find_all('h3')\n",
+    "\n",
+    "# Create list for each link's/image's title and list for combined title and image url\n",
+    "titles = []\n",
+    "hemisphere_image_urls = []\n",
+    "\n",
+    "# Collect the hemisphere title names and clean them for later display\n",
+    "for x in range(0, len(products)):\n",
+    "    title_draft = products[x].text\n",
+    "    title_clean = title_draft.replace(' Enhanced','')\n",
+    "    titles.append(title_clean)\n",
+    "    \n",
+    "# Click each link by title, click to obtain each image's html, and create final list of combined title/url\n",
+    "for title in titles:\n",
+    "    browser.links.find_by_partial_text(title).click()\n",
+    "    browser.links.find_by_text('Open').click()\n",
+    "    \n",
+    "    html = browser.html\n",
+    "    soup = BeautifulSoup(html, 'lxml')\n",
+    "\n",
+    "    img_url = 'https://marshemispheres.com/' + soup.find('img', class_=\"wide-image\")['src']\n",
+    "   \n",
+    "    dict_entry = {}\n",
+    "    dict_entry['title'] = title\n",
+    "    dict_entry['img_url'] = img_url\n",
+    "    \n",
+    "    hemisphere_image_urls.append(dict_entry)\n",
+    "    \n",
+    "\n",
+    "    browser.links.find_by_text('Close').click()\n",
+    "    browser.links.find_by_partial_text('Back').click()\n",
+    "    \n",
+    "print(hemisphere_image_urls)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "5566a6ea",
+   "id": "6d87f0f9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -159,7 +279,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f995475",
+   "id": "4e581929",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "35cfab3a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c290671b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ac5ba062",
    "metadata": {},
    "outputs": [],
    "source": []
