Completed code and index file

--- a/Missions_to_Mars/mission_to_mars.ipynb
+++ b/Missions_to_Mars/mission_to_mars.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4eeb0437",
+   "id": "503489d9",
    "metadata": {},
    "source": [
     "# Part  1: Scraping"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "31a8f051",
+   "id": "673a46d4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41afa024",
+   "id": "56f9655c",
    "metadata": {},
    "source": [
     "## NASA Mars News"
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a99e7171",
+   "id": "39882572",
    "metadata": {},
    "outputs": [
     {
@@ -55,13 +55,13 @@
    "source": [
     "# Set up splinter\n",
     "executable_path = {'executable_path': ChromeDriverManager().install()}\n",
-    "browser = Browser('chrome', **executable_path, headless=False)"
+    "browser = Browser('chrome', **executable_path, headless=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "51909b09",
+   "id": "a9668e9d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,15 +73,15 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "45d1dbb9",
+   "id": "a3697de6",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Global Storms on Mars Launch Dust Towers Into the Sky\n",
-      "A Mars Dust Tower Stands Out Dust storms are common on Mars. But every decade or so, something unpredictable happens: a series of runaway storms break out, covering the entire planet in a dusty haze.\n"
+      "NASA Readies Perseverance Mars Rover's Earthly Twin \n",
+      "Did you know NASA's next Mars rover has a nearly identical sibling on Earth for testing? Even better, it's about to roll for the first time through a replica Martian landscape.\n"
      ]
     }
    ],
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e15c643",
+   "id": "9d9ff8e6",
    "metadata": {},
    "source": [
     "## JPL Mars Space Images—Featured Image"
@@ -108,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "bbc1352d",
+   "id": "aafaa18a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "c81ff9fc",
+   "id": "debef1c1",
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3512913e",
+   "id": "ac1f8cd4",
    "metadata": {},
    "source": [
     "## Mars Facts"
@@ -152,8 +152,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
-   "id": "5a7b32d5",
+   "execution_count": 7,
+   "id": "9c6f6115",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,17 +163,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
-   "id": "900c7626",
+   "execution_count": 8,
+   "id": "c618a75c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'<table border=\"1\" class=\"dataframe\">  <thead>    <tr style=\"text-align: right;\">      <th></th>      <th>Mars</th>      <th>Earth</th>    </tr>    <tr>      <th>Description</th>      <th></th>      <th></th>    </tr>  </thead>  <tbody>    <tr>      <th>Mars - Earth Comparison</th>      <td>Mars</td>      <td>Earth</td>    </tr>    <tr>      <th>Diameter:</th>      <td>6,779 km</td>      <td>12,742 km</td>    </tr>    <tr>      <th>Mass:</th>      <td>6.39 × 10^23 kg</td>      <td>5.97 × 10^24 kg</td>    </tr>    <tr>      <th>Moons:</th>      <td>2</td>      <td>1</td>    </tr>    <tr>      <th>Distance from Sun:</th>      <td>227,943,824 km</td>      <td>149,598,262 km</td>    </tr>    <tr>      <th>Length of Year:</th>      <td>687 Earth days</td>      <td>365.24 days</td>    </tr>    <tr>      <th>Temperature:</th>      <td>-87 to -5 °C</td>      <td>-88 to 58°C</td>    </tr>  </tbody></table>'"
+       "'<table border=\"1\" class=\"dataframe table table-stripped\">  <thead>    <tr style=\"text-align: left;\">      <th></th>      <th>Mars</th>      <th>Earth</th>    </tr>    <tr>      <th>Description</th>      <th></th>      <th></th>    </tr>  </thead>  <tbody>    <tr>      <th>Mars - Earth Comparison</th>      <td>Mars</td>      <td>Earth</td>    </tr>    <tr>      <th>Diameter:</th>      <td>6,779 km</td>      <td>12,742 km</td>    </tr>    <tr>      <th>Mass:</th>      <td>6.39 × 10^23 kg</td>      <td>5.97 × 10^24 kg</td>    </tr>    <tr>      <th>Moons:</th>      <td>2</td>      <td>1</td>    </tr>    <tr>      <th>Distance from Sun:</th>      <td>227,943,824 km</td>      <td>149,598,262 km</td>    </tr>    <tr>      <th>Length of Year:</th>      <td>687 Earth days</td>      <td>365.24 days</td>    </tr>    <tr>      <th>Temperature:</th>      <td>-87 to -5 °C</td>      <td>-88 to 58°C</td>    </tr>  </tbody></table>'"
       ]
      },
-     "execution_count": 176,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,14 +187,14 @@
     "mars_facts.set_index('Description', inplace=True) # Set the index to the first column\n",
     "\n",
     "# Convert Mars Facts Data Frame to html, removing unwanted newlines\n",
-    "mars_facts = mars_facts.to_html()\n",
+    "mars_facts = mars_facts.to_html(classes='table table-stripped', justify='left', border=1)\n",
     "mars_facts = mars_facts.replace('\\n', '')\n",
     "mars_facts"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "153dfa30",
+   "id": "8fa278b3",
    "metadata": {},
    "source": [
     "## Mars Hemispheres"
@@ -202,8 +202,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
-   "id": "0516fa97",
+   "execution_count": 9,
+   "id": "bfaca67b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,15 +214,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
-   "id": "4d6e2103",
+   "execution_count": 10,
+   "id": "2343d348",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'title': 'Cerberus Hemisphere', 'img_url': 'https://marshemispheres.com/images/f5e372a36edfa389625da6d0cc25d905_cerberus_enhanced.tif_full.jpg'}, {'title': 'Schiaparelli Hemisphere', 'img_url': 'https://marshemispheres.com/images/3778f7b43bbbc89d6e3cfabb3613ba93_schiaparelli_enhanced.tif_full.jpg'}, {'title': 'Syrtis Major Hemisphere', 'img_url': 'https://marshemispheres.com/images/555e6403a6ddd7ba16ddb0e471cadcf7_syrtis_major_enhanced.tif_full.jpg'}, {'title': 'Valles Marineris Hemisphere', 'img_url': 'https://marshemispheres.com/images/b3c7c6c9138f57b4756be9b9c43e3a48_valles_marineris_enhanced.tif_full.jpg'}]\n"
+      "[{'title': 'Cerberus Hemisphere Enhanced', 'img_url': 'https://marshemispheres.com/images/f5e372a36edfa389625da6d0cc25d905_cerberus_enhanced.tif_full.jpg'}, {'title': 'Schiaparelli Hemisphere Enhanced', 'img_url': 'https://marshemispheres.com/images/3778f7b43bbbc89d6e3cfabb3613ba93_schiaparelli_enhanced.tif_full.jpg'}, {'title': 'Syrtis Major Hemisphere Enhanced', 'img_url': 'https://marshemispheres.com/images/555e6403a6ddd7ba16ddb0e471cadcf7_syrtis_major_enhanced.tif_full.jpg'}, {'title': 'Valles Marineris Hemisphere Enhanced', 'img_url': 'https://marshemispheres.com/images/b3c7c6c9138f57b4756be9b9c43e3a48_valles_marineris_enhanced.tif_full.jpg'}]\n"
      ]
     }
    ],
@@ -242,8 +242,7 @@
     "# Collect the hemisphere title names and clean them for later display\n",
     "for x in range(0, len(products)):\n",
     "    title_draft = products[x].text\n",
-    "    title_clean = title_draft.replace(' Enhanced','')\n",
-    "    titles.append(title_clean)\n",
+    "    titles.append(title_draft)\n",
     "    \n",
     "# Click each link by title, click to obtain each image's html, and create final list of combined title/url\n",
     "for title in titles:\n",
@@ -270,40 +269,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6d87f0f9",
+   "execution_count": 11,
+   "id": "d1c3e415",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Quit the browser\n",
+    "browser.quit()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "018e7955",
+   "metadata": {},
+   "source": [
+    "# Part 2: MongoDB and Flask Application"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "c1bbe69b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set an empty dict for listings that we can save to Mongo\n",
+    "mars_data = {}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "4cb81799",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add scraped data to the dict\n",
+    "mars_data['news_title'] = news_title\n",
+    "mars_data['news_p'] = news_p\n",
+    "mars_data['featured_image_url'] = featured_image_url\n",
+    "mars_data['mars_facts'] = mars_facts\n",
+    "mars_data['hemisphere_image_urls'] = hemisphere_image_urls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "6320a9b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'news_title': \"NASA Readies Perseverance Mars Rover's Earthly Twin \",\n",
+       " 'news_p': \"Did you know NASA's next Mars rover has a nearly identical sibling on Earth for testing? Even better, it's about to roll for the first time through a replica Martian landscape.\",\n",
+       " 'featured_image_url': 'https://spaceimages-mars.com/image/featured/mars2.jpg',\n",
+       " 'mars_facts': '<table border=\"1\" class=\"dataframe table table-stripped\">  <thead>    <tr style=\"text-align: left;\">      <th></th>      <th>Mars</th>      <th>Earth</th>    </tr>    <tr>      <th>Description</th>      <th></th>      <th></th>    </tr>  </thead>  <tbody>    <tr>      <th>Mars - Earth Comparison</th>      <td>Mars</td>      <td>Earth</td>    </tr>    <tr>      <th>Diameter:</th>      <td>6,779 km</td>      <td>12,742 km</td>    </tr>    <tr>      <th>Mass:</th>      <td>6.39 × 10^23 kg</td>      <td>5.97 × 10^24 kg</td>    </tr>    <tr>      <th>Moons:</th>      <td>2</td>      <td>1</td>    </tr>    <tr>      <th>Distance from Sun:</th>      <td>227,943,824 km</td>      <td>149,598,262 km</td>    </tr>    <tr>      <th>Length of Year:</th>      <td>687 Earth days</td>      <td>365.24 days</td>    </tr>    <tr>      <th>Temperature:</th>      <td>-87 to -5 °C</td>      <td>-88 to 58°C</td>    </tr>  </tbody></table>',\n",
+       " 'hemisphere_image_urls': [{'title': 'Cerberus Hemisphere Enhanced',\n",
+       "   'img_url': 'https://marshemispheres.com/images/f5e372a36edfa389625da6d0cc25d905_cerberus_enhanced.tif_full.jpg'},\n",
+       "  {'title': 'Schiaparelli Hemisphere Enhanced',\n",
+       "   'img_url': 'https://marshemispheres.com/images/3778f7b43bbbc89d6e3cfabb3613ba93_schiaparelli_enhanced.tif_full.jpg'},\n",
+       "  {'title': 'Syrtis Major Hemisphere Enhanced',\n",
+       "   'img_url': 'https://marshemispheres.com/images/555e6403a6ddd7ba16ddb0e471cadcf7_syrtis_major_enhanced.tif_full.jpg'},\n",
+       "  {'title': 'Valles Marineris Hemisphere Enhanced',\n",
+       "   'img_url': 'https://marshemispheres.com/images/b3c7c6c9138f57b4756be9b9c43e3a48_valles_marineris_enhanced.tif_full.jpg'}]}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mars_data"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e581929",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "35cfab3a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c290671b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ac5ba062",
+   "id": "f3f75aeb",
    "metadata": {},
    "outputs": [],
    "source": []
